<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom|center_horizontal"
    style="@style/Theme.Background"
    tools:context=".SplashScreen">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        style="@style/Theme.Image"
        android:background="@drawable/ic_whatsapp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic"
        android:textStyle="bold"
        android:text="@string/whatssender"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic"
        android:text="@string/by"
        android:layout_marginTop="150dp"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/basic"
        android:textStyle="bold"
        android:text="@string/hexa2zero"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        android:textSize="20sp"/>

</LinearLayout>